<resources>
    <string name="app_name">calculator_app</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_percent">%</string>
    <string name="_division">/</string>
    <string name="_sign_switch">+/-</string>
    <string name="_clear_all">c</string>
    <string name="_clear_operand">ce</string>
    <string name="_multiply">*</string>
    <string name="_increment">+</string>
    <string name="_decrement">-</string>
    <string name="_dot">,</string>
    <string name="_equals">=</string>
    <string name="_operand_placeholder">0</string>
    <string name="choose_theme">Выбрать тему приложения</string>
    <string name="radio_light">Светлая</string>
    <string name="radio_dark">Темная</string>
    <string name="theme_activity_heading">Пожалуйста, выберите тему</string>
    <string name="choose_theme_button">Выбрать</string>
</resources>