<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/status_textview"
        style="@style/StatusTextView"
        app:layout_constraintBottom_toTopOf="@+id/operand_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/operand_textview"
        style="@style/OperandTextView"
        app:layout_constraintBottom_toTopOf="@+id/grid_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <GridLayout
        android:id="@+id/grid_container"
        style="@style/CalcGridLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_clear_all"
            style="@style/ButtonCalc"
            android:layout_column="1"
            android:text="@string/_clear_all" />

        <Button
            android:id="@+id/button_clear_operand"
            style="@style/ButtonCalc"
            android:text="@string/_clear_operand" />

        <Button
            android:id="@+id/button_division"
            style="@style/ButtonCalc"
            android:text="@string/_division" />

        <Button
            android:id="@+id/button_7"
            style="@style/ButtonCalc"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button_8"
            style="@style/ButtonCalc"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button_9"
            style="@style/ButtonCalc"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button_multiply"
            style="@style/ButtonCalc"
            android:text="@string/_multiply" />

        <Button
            android:id="@+id/button_4"
            style="@style/ButtonCalc"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button_5"
            style="@style/ButtonCalc"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button_6"
            style="@style/ButtonCalc"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button_substract"
            style="@style/ButtonCalc"
            android:text="@string/_decrement" />

        <Button
            android:id="@+id/button_1"
            style="@style/ButtonCalc"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button_2"
            style="@style/ButtonCalc"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button_3"
            style="@style/ButtonCalc"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button_add"
            style="@style/ButtonCalc"
            android:text="@string/_increment" />

        <Button
            android:id="@+id/button_0"
            style="@style/ButtonCalc.Zero"
            android:text="@string/_0" />

        <Button
            android:id="@+id/button_dot"
            style="@style/ButtonCalc"
            android:text="@string/_dot" />

        <Button
            android:id="@+id/button_equals"
            style="@style/ButtonCalc"
            android:text="@string/_equals" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>