<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/operand_textview_margin"
    tools:context=".presentation.ThemeActivity">

    <TextView
        android:id="@+id/theme_activity_heading"
        style="@style/ThemeActivityHeading"
        app:layout_constraintBottom_toTopOf="@id/theme_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/theme_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/operand_textview_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_activity_heading">

        <RadioButton
            android:id="@+id/radio_light_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_light" />

        <RadioButton
            android:id="@+id/radio_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_dark" />

    </RadioGroup>

    <Button
        android:id="@+id/choose_theme_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>